# learning-drf

./: .gitignore  manage.py  pyproject.toml
apps/alunos/: admin.py  apps.py  models.py  serializers.py  views.py
apps/alunos/migrations/: 0001_initial.py  0002_alter_aluno_data_nascimento.py  0003_matricula.py
learning_drf/: asgi.py  settings.py  urls.py  wsgi.py
