[tool.poetry]
name = "learning-drf"
version = "0.1.0"
description = ""
authors = ["FeliPython <felipejpa15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
markdown = "^3.5.1"
pygments = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
